--- a/charts/simple-app/templates/deployment.yaml
+++ b/charts/simple-app/templates/deployment.yaml
@@ -3,6 +3,7 @@ kind: Deployment
 metadata:
   labels:
     app: {{ include "hello-go-web.fullname" . }}
+    test: testing
   name: {{ include "hello-go-web.fullname" . }}
 spec:
   replicas: {{ .Values.replicaCount }}
