--- a/charts/simple-app/values.yaml
+++ b/charts/simple-app/values.yaml
@@ -5,10 +5,10 @@
 replicaCount: 1
 
 image:
-  repository: tjololo/hello-go-web
+  repository: ghcr.io/tjololo/hello-go-web
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "1.0.0"
+  tag: "v1.0.0"
 
 
 linkerd:
