add option to switch ingress
Possible to switch between contour and traefik for ingress setip

--- a/charts/hello-go-web/templates/httpproxy.yaml
+++ b/charts/hello-go-web/templates/httpproxy.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.contour.enabled }}
 # httpproxy.yaml
 apiVersion: projectcontour.io/v1
 kind: HTTPProxy
@@ -14,3 +15,4 @@ spec:
       services:
         - name: {{ include "hello-go-web.fullname" . }}-http
           port: 8080
+{{- end }}
