--- a/charts/hello-go-web/templates/ingress-hack.yaml
+++ b/charts/hello-go-web/templates/ingress-hack.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.contour.enabled }}
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
@@ -18,3 +19,4 @@ spec:
   - hosts:
     - {{ .Values.url }}
     secretName: {{ include "hello-go-web.fullname" . }}
+{{- end }}
