fix tls certresolver bug

--- a/charts/hello-go-web/templates/traefikingress.yaml
+++ b/charts/hello-go-web/templates/traefikingress.yaml
@@ -15,5 +15,5 @@ spec:
     - name: {{ include "hello-go-web.fullname" . }}-http
       port: 8080
   tls:
-    certResolver: {{ .Values.traefik.tls }}
+    certResolver: {{ .Values.traefik.tls.certResolver }}
 {{- end }}
