--- a/charts/hello-go-web/templates/service.yaml
+++ b/charts/hello-go-web/templates/service.yaml
@@ -2,7 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "hello-go-web.fullname" . }}-http
-  namespace: default
+  labels:
+{{ toYaml .Values.labels | indent 4 }}
 spec:
   ports:
   - name: http
