--- a/charts/hello-go-web/templates/service.yaml
+++ b/charts/hello-go-web/templates/service.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "hello-go-web.fullname" . }}-http
+  name: {{ include "hello-go-web.fullname" . }}
   labels:
 {{ toYaml .Values.labels | indent 4 }}
 spec:
