--- a/charts/hello-go-web/values.yaml
+++ b/charts/hello-go-web/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: ghcr.io/tjololo/hello-go-web
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "v1.0.0"
+  tag: "v1.1.0"
 
 url: dev.418.cloud
 
@@ -33,8 +33,8 @@ traefik:
   enabled: false
   entryPoints:
     - websecure
-  tls:
-    certResolver: default
+  # tls:
+  #   certResolver: default
 
 hpa:
   enabled: false
