--- a/charts/hello-dotnet/templates/httpproxy.yaml
+++ b/charts/hello-dotnet/templates/httpproxy.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.contour.enabled }}
 # httpproxy.yaml
 apiVersion: projectcontour.io/v1
 kind: HTTPProxy
@@ -18,3 +19,4 @@ spec:
         replacePrefix:
         - prefix: /dotnet
           replacement: /
+{{- end }}
