fix ingress object

--- a/charts/hello-go-web/templates/ingress-hack.yaml
+++ b/charts/hello-go-web/templates/ingress-hack.yaml
@@ -12,7 +12,7 @@ spec:
   - host: {{ .Values.url }}
     http:
       paths:
-      - defaultBackend:
+      - backend:
           service:
             name: {{ include "hello-go-web.fullname" . }}
             port: 
